@@ -1,5 +1,10 @@
 FinalCif recent changes
 -----------------------
+* v138 Validators for loop values were added. Incorrect loop values turn the input field red and changed values are gray now.
+       Faster loading of large CIF files. The warning about inconsistent temperatures from different files was improved.
+       Empty loop values could not be overwritten by a dot. This has been fixed. Loops in the saved CIF are now aligned.
+       Report templates can use reference counting for references now. Creation of the bibliography in the report templates
+       has been improved.
 * v137 Validators for manually inserted numerical values were added. HTML templates are now possible for reports.
        Local CheckCif does not crash FinalCif anymore if the platon executable isn't found.
 * v136 Fix crash when adding authors to the CIF.
